bugfix. Postman tests